item_func.h:   Fixed bug #9939: a wrong conversion of arguments   for functions COALESCE and IFNULL.   The str_op virtual method was added into Item_func_numhybrid. item_func.cc:   Fixed bug #9939: a wrong conversion of arguments   for functions COALESCE and IFNULL.   The str_op virtual method was added into Item_func_numhybrid. item_cmpfunc.h, item_cmpfunc.cc:   Fixed bug #9939: a wrong conversion of arguments   for functions COALESCE and IFNULL.   Item_func_coalesce and Item_func_ifnull now   inherit from a modified Item_func_numhybrid. case.test, case.result:   Added test cases for bug #9939.